添加 redis数据缓存库, jedis存取数据

--- a/web-tutorials/src/main/webapp/html/java.html
+++ b/web-tutorials/src/main/webapp/html/java.html
@@ -217,7 +217,8 @@
 			$("#table_id").html("");
 			initChapters();
 		})
-	</script>
-</body>
+		</script>
+	</body>
+<script src="/static/js/canvas_nest.js" type="text/javascript" charset="utf-8"></script>
 
 </html>
