--- a/web-tutorials/src/main/webapp/html/kotlin.html
+++ b/web-tutorials/src/main/webapp/html/kotlin.html
@@ -219,6 +219,7 @@
 			initChapters();
 		})
 	</script>
+	<script src="/static/js/canvas_nest.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
