配置 Dockder运行时命令

--- a/web-tutorials/src/main/webapp/html/java.html
+++ b/web-tutorials/src/main/webapp/html/java.html
@@ -38,83 +38,13 @@
 			<div class=floatleft>
 				<table id="table_id">
 					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Warmup-1'>
-									<span class=h2>Warmup-1</span>
-								</a> 
-								<img src="http://codingbat.com/s2.jpg"/>
-								<img src="http://codingbat.com/s2.jpg"/>
-								<img src="http://codingbat.com/s1.jpg"/>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<br>Simple warmup problems to get started (solutions available)
-								<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Warmup-2'><span class=h2>Warmup-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Medium warmup string/array loops (solutions available)<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
+						<td>如果你看到了我, 说明数据还没加载出来</td>
 					</tr>
 					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/String-1'><span class=h2>String-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic string problems -- no loops<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Array-1'><span class=h2>Array-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic array problems -- no loops.<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
+						<td>只能是先等等了, 如果读到这里了还是没加载出来</td>
 					</tr>
 					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Logic-1'><span class=h2>Logic-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic boolean logic puzzles -- if else && || !<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Logic-2'><span class=h2>Logic-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Medium boolean logic puzzles -- if else && || !<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/String-2'><span class=h2>String-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Medium String problems -- 1 loop<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/String-3'><span class=h2>String-3</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> Harder String problems -- 2 loops<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Array-2'><span class=h2>Array-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> Medium array problems -- 1 loop<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Array-3'><span class=h2>Array-3</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> Harder array problems -- 2 loops, more complex logic<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/AP-1'><span class=h2>AP-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> AP CS medium problems<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Recursion-1'><span class=h2>Recursion-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic recursion problems<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Recursion-2'><span class=h2>Recursion-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Harder recursion problems<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td></td>
+						<td>那可能是网络有问题了, 可以F5刷新一下界面试试^_^</td>
 					</tr>
 				</table>
 			</div>
