--- a/web-tutorials/src/main/webapp/html/kotlin.html
+++ b/web-tutorials/src/main/webapp/html/kotlin.html
@@ -16,7 +16,7 @@
 			黑马程序员教考系统 
 		</h2>
 	</div>
-	<a href="/html/kotlin.html/">
+	<a href="/html/java.html/">
 		<span style='font-size:200%;'>
 		Itheima
 		</span>
@@ -26,10 +26,10 @@
 	<div class=tabc style="margin-top: 20px;">
 		<nav>
 			<ul>
-				<li class="h2">
+				<li class="h2" value="java">
 					<a href="/html/java.html/">Java</a>
 				</li>
-				<li class="h2" id="selected">
+				<li class="h2" id="selected" value="kotlin">
 					<a href="/html/kotlin.html/">Kotlin</a>
 				</li>
 			</ul>
@@ -38,83 +38,13 @@
 			<div class=floatleft>
 				<table id="table_id">
 					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Warmup-1'>
-									<span class=h2>Warmup-1</span>
-								</a> 
-								<img src="http://codingbat.com/s2.jpg"/>
-								<img src="http://codingbat.com/s2.jpg"/>
-								<img src="http://codingbat.com/s1.jpg"/>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<img src=http://codingbat.com/s1.jpg>
-								<br>Simple warmup problems to get started (solutions available)
-								<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Warmup-2'><span class=h2>Warmup-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Medium warmup string/array loops (solutions available)<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
+						<td>如果你看到了我, 说明数据还没加载出来</td>
 					</tr>
 					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/String-1'><span class=h2>String-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic string problems -- no loops<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Array-1'><span class=h2>Array-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic array problems -- no loops.<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
+						<td>只能是先等等了, 如果读到这里了还是没加载出来</td>
 					</tr>
 					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Logic-1'><span class=h2>Logic-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic boolean logic puzzles -- if else && || !<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Logic-2'><span class=h2>Logic-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Medium boolean logic puzzles -- if else && || !<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/String-2'><span class=h2>String-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Medium String problems -- 1 loop<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/String-3'><span class=h2>String-3</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> Harder String problems -- 2 loops<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Array-2'><span class=h2>Array-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> Medium array problems -- 1 loop<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Array-3'><span class=h2>Array-3</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> Harder array problems -- 2 loops, more complex logic<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/AP-1'><span class=h2>AP-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br> AP CS medium problems<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Recursion-1'><span class=h2>Recursion-1</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Basic recursion problems<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<div class=summ>
-								<a href='http://codingbat.com/java/Recursion-2'><span class=h2>Recursion-2</span></a> <img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><img src=http://codingbat.com/s1.jpg><br>Harder recursion problems<br><img src=http://codingbat.com/c1.jpg></div>
-						</td>
-						<td></td>
+						<td>那可能是网络有问题了, 可以F5刷新一下界面试试^_^</td>
 					</tr>
 				</table>
 			</div>
@@ -153,16 +83,16 @@
 					
 					var progress = Math.floor((ele.current / ele.total) * totalProgress);
 //					console.log(ele.name + "_c:" + ele.current + " t:" + ele.total + " P:" + progress);
-
+					
 					// 添加标题
-					var type = $("nav .h2[id='selected'] a").text();
-					var param = {"name":ele.name, "type":type};
-					var arg = urlEncode(param);
+                    var type = $("nav .h2[id='selected']").attr("value");
+//					var param = {"chapterName":ele.name, "type":type};
+//					var arg = urlEncode(param);
+                    var arg = "?chapterName="+ele.name+"&type="+type;
 
-					var str="<a href='/html/chapter_detail.html?"+arg+"'>"+
-							"<span class=h2>"+ele.name+"</span>"+
+					var str="<a href='/html/chapter_detail.html"+arg+"'>"+
+								"<span class=h2>"+ele.name+"</span>"+
 							"</a> "+ele.current+"/"+ele.total+"<br>";
-
 					// 或单独添加点击事件
 //				        function jump1(){
 //					    url = "b.html?name="+name+"&age="+age;//此处拼接内容
@@ -218,8 +148,8 @@
 			$("#table_id").html("");
 			initChapters();
 		})
-	</script>
-	<script src="/static/js/canvas_nest.js" type="text/javascript" charset="utf-8"></script>
-</body>
+		</script>
+	</body>
+<script src="/static/js/canvas_nest.js" type="text/javascript" charset="utf-8"></script>
 
 </html>
