--- a/web-tutorials/src/main/webapp/html/question.html
+++ b/web-tutorials/src/main/webapp/html/question.html
@@ -59,9 +59,9 @@
 				</span>
 				</a>
 
-				> <a href="/html/java.html/">章节列表</a>
-				> <span ><a id="current_chapter" href="#" onclick="javascript:history.back(-1)">Array-2</a></span>
-				> <span id="current_question">666</span>
+				<a href="/html/java.html/">章节列表</a>
+				<span ><a id="current_chapter" href="#" onclick="javascript:history.back(-1)">Array-2</a></span>
+				<span id="current_question">666</span>
 			</div>
 
 			<div id="area_question" style="width: 33%;">
@@ -86,8 +86,9 @@
 			</div>
 			<div id="area_code" style="width: 63%;margin-left: 1%;">
 
-					Itheima.java :<br/>
-					<textarea rows="25" style="padding: 5px;width: 98%; height: 80%;" id="codeArea" name="code">
+				<label for="codeArea">Itheima :</label>
+				<br/>
+				<textarea rows="25" style="padding: 5px;width: 98%; height: 80%;" id="codeArea" name="code">
 public class Itheima{
 
 }
@@ -130,7 +131,7 @@ public class Itheima{
                 );
             }
             var timerId = null;//定时器ID
-            var redisURL = "http://120.76.238.32:7379/";
+            var redisURL = "http://119.23.137.220:7379/";
             var tryCount = 0;
             // 处理异步请求结果
             function intervalGet(key) {
